# ASteCA

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  OCAAT.py  OCAAT_main.py  README.md  asteca.nja  asteca.py  data_input  environment.yml  isoch_fit_members.py  pyproject.toml  requirements.txt  temp_R_pack_check.py  zams_3_isos.data  zams_4_isos.data  zams_5_isos.data
.github/: copilot-instructions.md
asteca/: __init__.py  asteca.py  cluster.py  isochrones.py  isochs_read.py  likelihood.py  membership.py  plot.py  synth_cluster.py  synthetic.py
asteca/modules/: bayesian_da.py  cluster_mass_funcs.py  cluster_priv.py  extra_cls_inframe_UNUSED_06-23.py  fastmp.py  imfs.py  (+12 more)
docs/: CHANGELOG.rst  Makefile  cmd_support.rst  conf.py  docutils.conf  download.rst  index.rst  installation.rst  requirements.txt  running.rst  synth_clust.rst
functions/: __init__.py  add_data_output.py  asteca_main.py  best_fit_synth_cl.py  bootstrap_func.py  brute_force_algorithm.py  checker.py  cl_members_file.py  clusters_ext.py  cmd_phot_systs.py  create_out_data_file.py  decont_algor_bys.py  display_cent.py  display_errors.py  display_frame.py  display_rad.py  done_move.py  equal_dist_points_interp.py  err_accpt_rejct.py  err_accpt_rejct_03.py  err_accpt_rejct_eyefit.py  err_accpt_rejct_lowexp.py  err_accpt_rejct_max.py  err_medians.py  error_round.py  exp_function.py  field_decont_VB.py  field_decont_bys.py  field_decont_dias.py  field_decont_kde.py  field_decont_ran.py  func_caller.py  ga_plots.py  genetic_algorithm.py  genetig_algorithm.py  get_2d_histo.py  get_2d_hists.py  get_CCM_coefs.py  get_IMF_CDF.py  get_IMF_PDF.py  (+48 more)
input/: README.md  ocaat_input.dat.ex  ocaat_input.dat.example  semi_input.dat.ex
input_examples/: README.md  README.txt
isochrones/: README.md  README_iso.md
man/: ASteCA_manual.tex  OCAAT_manual.tex
manual/: OCAAT_manual.tex
output/: ocaat_output.dat.example
param_files/: README.md
(+193 files in other folders)
