[project]
name = "asteca"
version = "0.6.2-dev"
description = "Stellar cluster analysis package"
authors = [
    {name = "Gabriel I Perren", email = "gabrielperren@gmail.com"}
]
readme = "README.md"
license = "MIT"
keywords = ["cluster", "astrophysics"]
homepage = "https://asteca.github.io/"
repository = "https://github.com/asteca/ASteCA"
documentation = "https://asteca.readthedocs.io/"
requires-python = ">=3.12.12"
dependencies = [
    "astropy>=7.2.0",
    "fast-histogram>=0.14",
    "numpy>=2.4.0",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
